--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,13 @@
 buildscript {
     ext.kotlin_version = '1.3.31'
     repositories {
+
         google()
         jcenter()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0-beta01'
+        classpath 'com.android.tools.build:gradle:3.5.0-beta05'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,6 +18,9 @@ buildscript {
 
 allprojects {
     repositories {
+        repositories {
+            maven { url 'https://jitpack.io' }
+        }
         google()
         jcenter()
         
